force-app/main/default/objects/Test_Execution_PMT__c/Test_Execution_PMT__c.object-meta.xml
<CustomObject>
    <label>Test Execution</label>
    <nameField>
        <label>Test Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>