force-app/main/default/objects/Test_Execution_PMT__c/fields/End_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>End_Date_PMT__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>