force-app/main/default/objects/Test_Execution_PMT__c/fields/Execution_owner_PMT__c.field-meta.xml
<CustomField>
    <fullName>Execution_owner_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>