force-app/main/default/objects/Test_Execution_PMT__c/fields/Last_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Last_Iteration__c</fullName>
    <label>Last Iteration</label>
    <summarizedField>Test_Iteration__c.Iteration_Number_PMT__c</summarizedField>
    <summaryFilterItems>
        <field>Test_Iteration__c.Status_PMT__c</field>
        <operation>equals</operation>
        <value>Failed, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Iteration__c.Test_Execution_PMT__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>