force-app/main/default/objects/Test_Execution_PMT__c/fields/Number_of_Iteration_PMT__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Iteration_PMT__c</fullName>
    <label>Number of Iteration</label>
    <summaryForeignKey>Test_Iteration__c.Test_Execution_PMT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>