force-app/main/default/objects/Test_Execution_PMT__c/fields/Start_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_PMT__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>