force-app/main/default/objects/Test_Execution_PMT__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>User acceptence</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>